syntax = "proto3";

package authorization.v2;

import "v2/authorization/key.proto";

message ClientV2 {
  string id = 1;
  string consumerId = 2;
  string name = 3;
  optional string description = 4;
  repeated string relationships = 5;
  repeated string purposes = 6;
  ClientKindV2 kind = 7;
  optional int64 createdAt = 8; // to do double-check why optional
  repeated string users = 9;
  repeated KeyV2 keys = 10;
}

enum ClientKindV2 {
  CONSUMER = 0;
  API = 1;
}
